2002-03-17  Clint Adams  <clint@zsh.org>

	* 16850: Completion/Unix/Command/_rsync: remote file completion via
	rsync and ssh, plus all options valid in rsync 2.5.2.

2002-03-17  Bart Schaefer  <schaefer@zsh.org>

	* 16849: Completion/Base/Core/_dispatch: shift off `-s' argument.

2002-03-17  Clint Adams  <clint@zsh.org>

	* 16847: Completion/Unix/Command/_cvs: complete multiple -j's after
	cvs update.

	* 16846: Completion/X/Command/_xdvi: complete .dvi.gz and .dvi.bz2
	too.

2002-03-16  Bart Schaefer  <schaefer@zsh.org>

	* 16820: Test/E01options.ztst: change tests to match 16759.

2002-03-15  Oliver Kiddle  <opk@zsh.org>

	* 16842: Completion/Base/Utility/_pick_variant,
	Completion/Base/Utility/.distfiles, Completion/Unix/Command/_cpio,
	Completion/Unix/Command/_grep, Completion/Unix/Command/_iconv,
	Completion/Unix/Command/_ls, Completion/Unix/Command/_make,
	Completion/Unix/Command/_netcat, Completion/Unix/Command/_zcat,
	Completion/Unix/Type/_diff_options, Completion/X/Command/_nedit,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo:
	resolve name clash for nc between netcat and the nedit client
	and add utility function to handle the general case of this

	* 16838: Completion/Unix/Command/_grep: complete new options of
	grep 2.5 and value for GREP_OPTIONS parameter

2002-03-14  Oliver Kiddle  <opk@zsh.org>

	* 16823: Completion/Unix/Command/_gzip,
	Completion/Unix/Type/_dir_list, Completion/Unix/Type/_directories:
	complete for values of GZIP and any *path or *PATH parameters

2002-03-14  Peter Stephenson  <pws@csr.com>

	* 16821 (adapted, c.f. 16831): Completion/Unix/Command/_bzip2,
	Completion/Unix/Command/_compress,
	Completion/Unix/Command/_gzip: add completions for the redirection
	code in 16819.

2002-03-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 16819: Completion/compdump, Completion/compinit,
	Completion/Base/Completer/_complete,
	Completion/Base/Core/_dispatch, Completion/Base/Core/_normal,
	Completion/Base/Utility/_set_command,